<?xml version="1.0"?>
<package format="2">
  <name>raspimouse_ros_examples</name>
  <version>0.0.1</version>
  <description>The raspimouse_ros_examples package</description>
  <maintainer email="takuminpc@gmail.com">tentenNT</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</depend>
  <exec_depend>std_srvs</depend>
  <exec_depend>sensor_msgs</depend>
  <exec_depend>geometry_msgs</depend>
  <exec_depend>raspimouse_ros_2</depend>
  <exec_depend>cv_bridge</depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <export>
  </export>

</package>
